WanaLyzer/out/numpy/typing/tests/data/pass/lib_utils.pyi
from _typeshed import Incomplete

FILE: Incomplete
AR: Incomplete

def func(a: int) -> bool: ...
